# salt-iching

./: MANIFEST.in  README.md  setup.cfg  setup.py
iching/: data.json  iching.py
src/SaltIching.egg-info/: PKG-INFO  SOURCES.txt
src/iching/: data.json  iching.py
